<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name_dev">Haveri Tourism Test</string>
    <string name="app_name_prod">Haveri Tourism</string>
    <string name="action_settings">Settings</string>

    <!-- Play Store -->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <string name="text_separator">/%s</string>

    <!-- Fonts ttf SourceSansPro -->
    <string name="font_ssp_bold">SourceSansPro-Bold.ttf</string>
    <string name="font_ssp_italic">SourceSansPro-Italic.ttf</string>
    <string name="font_ssp_light">SourceSansPro-Light.ttf</string>
    <string name="font_ssp_regular">SourceSansPro-Regular.ttf</string>

    <!-- Fonts ttf Roboto -->
    <string name="font_roboto_black">Roboto-Black.ttf</string>
    <string name="font_roboto_black_italic">Roboto-BlackItalic.ttf</string>
    <string name="font_roboto_bold">Roboto-Bold.ttf</string>
    <string name="font_roboto_bold_italic">Roboto-BoldItalic.ttf</string>
    <string name="font_roboto_italic">Roboto-Italic.ttf</string>
    <string name="font_roboto_light">Roboto-Light.ttf</string>
    <string name="font_roboto_light_italic">Roboto-LightItalic.ttf</string>
    <string name="font_roboto_medium">Roboto-Medium.ttf</string>
    <string name="font_roboto_medium_italic">Roboto-MediumItalic.ttf</string>
    <string name="font_roboto_regular">Roboto-Regular.ttf</string>
    <string name="font_roboto_thin">Roboto-Thin.ttf</string>
    <string name="font_roboto_thin_italic">Roboto-ThinItalic.ttf</string>

    <!-- App Titles -->
    <string name="title_activity_empty">""</string>
    <string name="title_app_name"><b>H</b>averi-<b>T</b>ourism</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_taluk">Taluk\'s</string>
    <string name="title_activity_place">Place\'s</string>

    <!-- App Labels -->
    <string name="label_error">Something went wrong</string>
    <string name="label_error_no_internet">No internet connection</string>
    <string name="label_please_retry">Please Retry</string>
    <string name="label_retry">Retry</string>
    <string name="label_no_data">No Data found</string>
    <string name="label_view_all">See All</string>
    <string name="label_taluk">Taluk\'s</string>
    <string name="label_places">Place\'s</string>
    <string name="label_image_gallery">Explore Gallery</string>
    <string name="label_events">Events</string>
    <string name="label_explore_video">Explore Video\'s</string>
    <string name="label_how_to_reach_haveri">How to reach Haveri</string>
    <string name="label_how_to_reach">How to reach</string>
    <string name="label_description">Description</string>

    <string name="label_notification">Notification</string>
    <string name="label_notification_destination">Destinations</string>
    <string name="label_notification_events">Events</string>
    <string name="label_select_language">Select Language</string>
    <string name="label_language_english">English</string>
    <string name="label_language_kannada">ಕನ್ನಡ</string>
    <string name="label_images">Images</string>
    <string name="label_image_clear_cache">Clear image cache</string>
    <string name="label_theme">Select Theme</string>
    <string name="label_others">Others</string>
    <string name="label_feedback">Feedback</string>
    <string name="label_about">About</string>

    <string name="label_count_place">%d Place</string>
    <string name="label_count_places">%d Places</string>
    <string name="label_count_event">%d Event</string>
    <string name="label_count_events">%d Events</string>

    <!-- Tab Titles -->
    <string name="tab_title_about">About</string>
    <string name="tab_title_places">Places</string>
    <string name="tab_title_gallery">Gallery</string>
    <string name="tab_title_videos">Videos</string>
    <string name="tab_title_events">Events</string>

    <string name="hint_distance">Distance</string>
    <string name="hint_visit_time">Visiting Time</string>
    <string name="hint_contact_phone">Contact Number</string>
    <string name="hint_web_link">Web Link</string>

    <!-- Error  -->
    <string name="error_db_load_data">Problem in loading data</string>

</resources>
