<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:id="@+id/ll_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_30"
                android:tint="@color/color_error"
                app:srcCompat="@drawable/ic_error" />

            <application.haveri.tourism.ui.custom.CustomTextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="center"
                android:text="@string/label_error"
                android:textColor="?attr/colorTextLight"
                android:textSize="@dimen/font_normal" />

            <application.haveri.tourism.ui.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_30"
                android:text="@string/label_please_retry"
                android:textColor="?attr/colorTextLight"
                android:textSize="@dimen/font_medium" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/color_error"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_30"
                android:minWidth="@dimen/button_min_width"
                android:text="@string/label_retry"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_normal" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</layout>