<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="application.haveri.tourism.utils.CommonUtils" />

        <variable
            name="viewModel"
            type="application.haveri.tourism.ui.fragment.taluk.taluk_list.adapter.TalukListAdapterViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorBackground"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="@{()->viewModel.onItemClick()}"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_taluk"
                android:layout_width="match_parent"
                android:layout_height="@dimen/taluk_image_height_full"
                android:background="@color/color_image_background"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                app:imageUrl="@{viewModel.imageUrl}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <application.haveri.tourism.ui.custom.CustomTextView
                        android:id="@+id/tv_taluk_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/tv_distance"
                        android:text="@{viewModel.talukName}"
                        android:textColor="?attr/colorPrimaryText"
                        android:textSize="@dimen/font_normal"
                        android:textStyle="bold"
                        app:customFont="@string/font_roboto_medium" />

                    <application.haveri.tourism.ui.custom.CustomTextView
                        android:id="@+id/tv_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@{viewModel.distanceInKm}"
                        android:textColor="?attr/colorTextTheme"
                        android:textSize="@dimen/font_medium"
                        app:customFont="@string/font_roboto_regular" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6">

                    <application.haveri.tourism.ui.custom.CustomTextView
                        android:id="@+id/tv_place_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="0dp"
                        android:text="@{viewModel.placeCount}"
                        android:textColor="?attr/colorPrimaryText"
                        android:textSize="@dimen/font_medium"
                        app:customFont="@string/font_roboto_regular"
                        tools:ignore="RelativeOverlap" />

                    <application.haveri.tourism.ui.custom.CustomTextView
                        android:id="@+id/tv_events_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@{viewModel.eventCount}"
                        android:textColor="?attr/colorTextTheme"
                        android:textSize="@dimen/font_medium"
                        app:customFont="@string/font_roboto_regular"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

                <application.haveri.tourism.ui.custom.CustomTextView
                    android:id="@+id/tv_taluk_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@{CommonUtils.toHtml(viewModel.talukDescription)}"
                    android:textColor="?attr/colorTextLight"
                    android:textSize="@dimen/font_medium"
                    app:customFont="@string/font_roboto_light" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
